--- a/.github/workflows/nodejs_merge.yml
+++ b/.github/workflows/nodejs_merge.yml
@@ -33,7 +33,7 @@ jobs:
     - name: automerge
       uses: "pascalgn/automerge-action@v0.15.6"
       env:
-        GITHUB_TOKEN"${{ secrets.GH_PAT }}"
+        GITHUB_TOKEN: "${{ secrets.GH_PAT }}"
         MERGE_LABELS: ""
 
   test:
