--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auto-it/jira": "^11.0.0",
     "@auto-it/released": "^11.0.0",
     "@auto-it/slack": "^11.0.0",
+    "@actions/tool-cache": "^1.5.4",
     "auto": "^11.0.0",
     "octokit": "^3.1.0",
     "semver": "^7.5.4",
