--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@actions/core": "1.10.0",
     "@actions/github": "5.1.1",
     "@actions/io": "^1.1.3",
+    "@actions/tool-cache": "^1.5.4",
     "@auto-it/jira": "^11.0.0",
     "@auto-it/released": "^11.0.0",
     "@auto-it/slack": "^11.0.0",
-    "@actions/tool-cache": "^1.5.4",
     "auto": "^11.0.0",
     "octokit": "^3.1.0",
     "semver": "^7.5.4",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "shelljs.exec": "^1.1.8"
   },
   "devDependencies": {
     "@eslint/js": "8.46.0",
