--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autorelease",
+  "name": "autoreleases",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sqaisar/auto-release.git"
+    "url": "git+https://github.com/sqaisar/auto-releases.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sqaisar/auto-release/issues"
+    "url": "https://github.com/sqaisar/auto-releases/issues"
   },
-  "homepage": "https://github.com/sqaisar/auto-release#readme",
+  "homepage": "https://github.com/sqaisar/auto-releases#readme",
   "dependencies": {
     "@actions/core": "1.10.0",
     "@actions/github": "5.1.1",
@@ -26,8 +26,8 @@
     "@actions/tool-cache": "^1.5.4",
     "@auto-it/jira": "^11.0.0",
     "@auto-it/released": "^11.0.0",
-    "@auto-it/slack": "^11.0.0",
     "auto": "^11.0.0",
+    "axios": "^1.4.0",
     "octokit": "^3.1.0",
     "semver": "^7.5.4",
     "shelljs": "^0.8.5",
